231225-1200 YK: - LAST CHANGES: just a hover position shift fix for INDEX background video pause button - Well done we did it! :D

--- a/index.css
+++ b/index.css
@@ -114,6 +114,7 @@
     color: white;
     font-size: x-small;
     padding-top: 5px;
+    line-height: normal;
     vertical-align: middle;
 }
 
